[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lethe"
description = "Lithography mask library"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name="Jan Petykiewicz", email="jan@mpxd.net" },
    ]
homepage = "https://mpxd.net/code/jan/lethe"
repository = "https://mpxd.net/code/jan/lethe"
keywords = [
    "git",
    "snapshot",
    "commit",
    "refs",
    "backup",
    "undo",
    "log",
    "lab notebook",
    "traceability",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    ]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    ]


[tool.hatch.version]
path = "lethe/__init__.py"

[project.scripts]
lethe = "lethe.endpoints:main"
lethe-push = "lethe.endpoints:push"
lethe-fetch = "lethe.endpoints:fetch"


[tool.ruff]
exclude = [
    ".git",
    "dist",
    ]
line-length = 145
indent-width = 4
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.select = [
    "NPY", "E", "F", "W", "B", "ANN", "UP", "SLOT", "SIM", "LOG",
    "C4", "ISC", "PIE", "PT", "RET", "TCH", "PTH", "INT",
    "ARG", "PL", "R", "TRY",
    "G010", "G101", "G201", "G202",
    "Q002", "Q003", "Q004",
    ]
lint.ignore = [
    #"ANN001",   # No annotation
    "ANN002",   # *args
    "ANN003",   # **kwargs
    "ANN401",   # Any
    "ANN101",   # self: Self
    "SIM108",   # single-line if / else assignment
    "RET504",   # x=y+z; return x
    "PIE790",   # unnecessary pass
    "ISC003",   # non-implicit string concatenation
    "C408",     # dict(x=y) instead of {'x': y}
    "PLR09",    # Too many xxx
    "PLR2004",  # magic number
    "PLC0414",  # import x as x
    "TRY003",   # Long exception message
    ]

